# XiaomiPractice

./: CMakeLists.txt  README.md  clientData1  clientData2  clientData3
backup/: XRCEAgent.cpp
include/: Iclient.h  InfoStudent.h  xrcedds_demo.hpp
output/: 20240508142013.txt  20240508142021.txt  20240508142029.txt  20240508162037.txt  20240508162045.txt  20240508162052.txt  20240508162100.txt  20240508162108.txt
src/: Iclient.cpp  InfoStudent.c
src/clients/: clientData1.cpp  clientData2.cpp  clientData3.cpp
src/dataCenter/: agent.cpp  center.cpp  server.cpp
